--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "moment": "^2.22.2",
     "mssql": "^4.1.0",
+    "node-gzip": "^1.1.2",
     "rets-client": "^5.2.1",
     "underscore": "^1.9.1"
   }
